# MangAItranslator

./: .gitignore  ANNOUNCEMENT_COPY.md  GEMINI.md  LICENSE  README.md  RELEASE_BETA.md  RELEASE_FINAL_CHECKLIST.md  RELEASE_GITHUB.md  package-lock.json  package.json  tailwind.config.js  temas.md  testes.txt  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
conductor/: error-mapping.md  handoff-20260327.md  mvp-blueprint-20260327.md  product.md  roadmap-detailed.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/base_workflow_20260117/: plan.md  spec.md
conductor/archive/history_persistence_20260118/: plan.md
conductor/tracks/base_workflow_20260117/: index.md  metadata.json  plan.md
conductor/tracks/history_persistence_20260118/: index.md  (+3 more)
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BrandMark.tsx  ChapterNameModal.tsx  ConfirmModal.tsx  CyberLoading.tsx  EditorView.tsx  ExportModal.tsx  FileUpload.tsx  LibraryView.tsx  MangaBackground.tsx  OnboardingOverlay.tsx  SettingsView.tsx  StatusModal.tsx  UpdateModal.tsx
src/config/: geminiModels.ts  ollamaModels.ts  openAiCompatibleProviders.ts
src/contexts/: ThemeContext.tsx
src/hooks/: useAppUpdater.ts
src/locales/: pt.json
src/services/: dbService.ts  geminiService.ts  ollamaService.ts  openAiCompatibleService.ts  translationService.ts
src/store/: useMangaStore.ts
src/utils/: exportUtils.ts
(+4 files in other folders)
